additional info name should not contain punctuation